--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/Research">Research</a></li>
 	        		<li><a href="/Publications">Publications</a></li>
-	        		<li><a href="/Lab%20members">Lab members</a></li>
-              <li><a href="/Alumni">Alumni</a></li>
-              <li><a href="/Contact">Contact</a></li>
+	        		<li><a href="/People">People</a></li>
+              			<li><a href="/Alumni">Alumni</a></li>
+              			<li><a href="/Contact">Contact</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
