--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,11 @@ h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     color: #333;
 }
+h3 {
+    font-size: 1.5em;
+    font-family:'Arial', 'Sans-Serif';
+    color: #333;
+}
 p {
     font-size: 1.5em;
     line-height: 1.4em;
