--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a></li>
-	        		<img src="IAB_pied_page.jpg" width="350" title="IAB">
+	        		<img src="IAB_enTete_page.jpg" width="500" title="IAB">
 				<li><a href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li>
 				</ul>
 			</footer>
