--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a></li>
-	        		<a> href="https://iab.univ-grenoble-alpes.fr/?language=en"><img border="0" alt="IAB" src="IAB logo coul.png" width="500"></a>
+	        		<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="IAB logo coul.png" width="500"></a>
 				<li><a href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li>
 				</ul>
 			</footer>
