--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,9 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a></li>
-	        		<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="IAB logo coul.png" width="500"></a>
+	        		<div><li>
+	        		<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="IAB logo coul.png" width="300"></a> 
+				<a href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a></li></div>
 				<li><a href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li>
 				</ul>
 			</footer>
