--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 	        		<div><li>
 	        		<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="IAB logo coul.png" width="300"></a> 
 				<a href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a></li></div>
-				<li><a href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li>
+				<div><a href="www.univ-grenoble-alpes.fr/english/"> <img alt="UGA" src="UGA.png" width="300"></a><li><a href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li></div>
 				</ul>
 			</footer>
 		</body>
