--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,10 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<div><li>
+	        		<li>
 	        		<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="IAB logo coul.png" width="300"></a> 
-				<a href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a></div>
-				<div><a href="www.univ-grenoble-alpes.fr/english/"> <img alt="UGA" src="UGA.png" width="200"></a><a href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li></div>
+				<a href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a>
+				<a href="www.univ-grenoble-alpes.fr/english/"> <img alt="UGA" src="UGA.png" width="200"></a><a href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li>
 				</ul>
 			</footer>
 		</body>
