--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 	        		<li>
 	        		<div><a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="IAB logo coul.png" width="300"></a> 
 				<a href="www.univ-grenoble-alpes.fr/english/"> <img alt="UGA" src="UGA.png" width="200"></a> </div>
-				<div><a href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a>
+				<div><a href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a>&emsp;&emsp;
 				<a href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li></div>
 				</ul>
 			</footer>
