--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 	    		<ul>
 	        		<li>
 	        		<div><a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="IAB logo coul.png" width="300"></a> 
-				<a href="www.univ-grenoble-alpes.fr/english/"> <img align="right" alt="UGA" src="UGA.png" width="200"></a> </div>
+				<a href="www.univ-grenoble-alpes.fr/english/"> <img align="right" alt="UGA" src="UGA.png" width="200"></a> </div> <br>
 				<div><a align="left" href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a>
 				<a align="left" href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li></div>
 				</ul>
