--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,11 @@
 			<footer>
 	    		<ul>
 	        		<li>
-	        		<div><a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="IAB logo coul.png" width="300"></a> 
-				<a href="www.univ-grenoble-alpes.fr/english/"> <img align="right" alt="UGA" src="UGA.png" width="200"></a> </div> <br><br><br><br><br><br><br><br><br>
-				<div><a align="left" href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a>
-				<a align="left" href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li></div>
+	        			<div <a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="IAB logo coul.png" width="300"></a> 
+					<a href="www.univ-grenoble-alpes.fr/english/"> <img align="right" alt="UGA" src="UGA.png" width="200"></a> </div> </li>
+				<li>
+					<div <a align="left" href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a>
+					<a align="left" href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li></div>
 				</ul>
 			</footer>
 		</body>
