--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
 	        			<div <a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="IAB logo coul.png" width="300"></a> 
 					<a href="www.univ-grenoble-alpes.fr/english/"> <img align="right" alt="UGA" src="UGA.png" width="200"></a> </div> </li>
 				<li>
-					<div <a align="left" href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a>
-					<a align="left" href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li></div>
+					<a align="left" href="https://iab.univ-grenoble-alpes.fr/?language=en">Institute for Advanced Biosciences</a>
+					<a align="left" href="https://www.univ-grenoble-alpes.fr/english/">Université Grenoble Alpes</a></li>
 				</ul>
 			</footer>
 		</body>
