--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
 			<footer>
 	    		<ul>
 	        		<li>
-	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="IAB logo coul.png" heigth="200"></a> 
-					<a href="https://univ-grenoble-alpes.fr/english"> <img align="right" alt="UGA" src="UGA.png" heigth="200"></a> </li>
+	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="IAB logo coul.png" width="250"></a> 
+					<a href="https://univ-grenoble-alpes.fr/english"> <img align="right" alt="UGA" src="UGA.png" width="200"></a> </li>
 				</ul>
 			</footer>
 		</body>
