--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			<footer>
 	    		<ul>
 	        		<li>
-	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="IAB logo coul.png" width="250"></a> 
+	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="Images/IAB logo coul.png" width="250"></a> 
 					<a href="https://univ-grenoble-alpes.fr/english"> <img align="right" alt="UGA" src="Images/UGA.png" width="200"></a> </li>
 				</ul>
 			</footer>
