--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
 	    		<ul>
 	        		<li>
 	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="Images/IAB logo coul.png" width="250"></a> 
+					<img align="center" alt="IAB" src="Images/IAB.png" width="250"> 
 					<a href="https://univ-grenoble-alpes.fr/english"> <img align="right" alt="UGA" src="Images/UGA.png" width="200"></a> </li>
 				</ul>
 			</footer>
