--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,13 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+<style>
+.centrer {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+</style>
