--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,14 @@
 		</head>
 		<body>
 			<nav>
-	    		<ul>
+	    		<a align="center" <ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/Research">Research</a></li>
 	        		<li><a href="/Publications">Publications</a></li>
 	        		<li><a href="/People">People</a></li>
               			<li><a href="/Alumni">Alumni</a></li>
               			<li><a href="/Contact">Contact</a></li>
-	    		</ul>
+				</ul> </a>
 			</nav>
 			<div class="container">
 			
