--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,12 @@
 		<body>
 			<nav>
 	    		<div align="center" align="justify" <ul>
-	        		<li><a href="/">Home</a></li>
+	        		<li <li><a href="/">Home</a></li>
 		        	<li><a href="/Research">Research</a></li>
 	        		<li><a href="/Publications">Publications</a></li>
 	        		<li><a href="/People">People</a></li>
               			<li><a href="/Alumni">Alumni</a></li>
-              			<li><a href="/Contact">Contact</a></li>
+			<li><a href="/Contact">Contact</a></li></li>
 				</ul> </div>
 			</nav>
 			<div class="container">
