--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 		</head>
 		<body>
 			<nav>
-	    		<div align="center" <ul>
+	    		<div align="center"> <ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/Research">Research</a></li>
 	        		<li><a href="/Publications">Publications</a></li>
