--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    align="center"
 }
 h2 {
     font-size: 1.5em;
