--- a/css/main.css
+++ b/css/main.css
@@ -22,12 +22,13 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    align="center"
+    align: center;
 }
 h2 {
     font-size: 1.5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     color: #333;
+    align: center;
 }
 h3 {
     font-size: 1em;
@@ -38,6 +39,7 @@ p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
+    align: justify;
 }
 footer {
     border-top: 1px solid #d5d5d5;
