--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 	    		<ul>
 	        		<li>
 	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="250"></a> 
-					<img align="center" alt="IAB" src="https://reynoird-lab.github.io/Images/IAB.png" width="400">
+					<div align="center"> <img align="center" alt="IAB" src="https://reynoird-lab.github.io/Images/IAB.png" width="400"></div>
 					<a href="https://univ-grenoble-alpes.fr/english"> <img align="right" alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" width="200"></a> 
 				</li>
 				</ul>
