--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,10 @@
 			<footer>
 	    		<ul>
 	        		<li>
-	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img align="left" alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="250"></a> 
-					<div align="center"> <img align="center" alt="IAB" src="https://reynoird-lab.github.io/Images/IAB.png" width="400"></div>
-					<a href="https://univ-grenoble-alpes.fr/english"> <img align="right" alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" width="200"></a> 
+	        			<div align="center">
+						<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="250"></a> 
+					 <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB.png" width="400">
+					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" width="200"></a> </div>
 				</li>
 				</ul>
 			</footer>
