--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			<footer>
 	    		<ul>
 	        		<li>
-	        			<div align="center">
+	        			<div align="center" align="middle">
 					 <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB.png" width="400">
 					<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="250"></a> 
 					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" width="200"></a> </div>
