--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
 	    		<ul>
 	        		<li>
 	        			<div align="center" align="middle">
-					<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="250"></a> 
-					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" width="200"></a> </div>
+					<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" align="left" width="250"></a> 
+					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" align="rught" width="220"></a> </div>
 				</li>
 				</ul>
 			</footer>
