--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 	    		<ul>
 	        		<li>
 	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" align="left" width="250"></a> 
-					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" align="rught" width="220"></a>
+					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" align="right" width="220"></a>
 				</li>
 				</ul>
 			</footer>
