--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,10 @@
 			<footer>
 	    		<ul>
 	        		<li>
-	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" align="left" width="240"></a> 
-					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" align="right" width="190"></a>
+	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" align="left" width="250"></a> 
+					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" align="left" width="250"></a>
+					<img alt="IAB" src="https://reynoird-lab.github.io/Images/logo_inserm.jpg" align="left" width="240">
+					<img alt="IAB" src="https://reynoird-lab.github.io/Images/logo_CNRS.jpg" align="left" width="240">
 				</li>
 				</ul>
 			</footer>
