--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,10 @@
 			<footer>
 	    		<ul>
 	        		<li>
-	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" align="left" style="margin: 0px 20px 0px 0px;" width="250"></a> 
-					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" style="margin: 0px 20px 0px 0px;" align="left" width="250"></a>
-					<img alt="INSERM" src="https://reynoird-lab.github.io/Images/logo_inserm.jpg" align="left" style="margin: 0px 20px 0px 0px;" width="250">
-					<img alt="CNRS" src="https://reynoird-lab.github.io/Images/logo_cnrs.jpg" align="left" style="margin: 0px 20px 0px 0px;" width="250">
+	        			<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" align="left" style="margin: 0px 20px 0px 0px;" heigth="250"></a> 
+					<a href="https://univ-grenoble-alpes.fr/english"> <img alt="UGA" src="https://reynoird-lab.github.io/Images/UGA.png" style="margin: 0px 20px 0px 0px;" align="left" heigth="250"></a>
+					<img alt="INSERM" src="https://reynoird-lab.github.io/Images/logo_inserm.jpg" align="left" style="margin: 0px 20px 0px 0px;" heigth="250">
+					<img alt="CNRS" src="https://reynoird-lab.github.io/Images/logo_cnrs.jpg" align="left" style="margin: 0px 20px 0px 0px;" heigth="250">
 				</li>
 				</ul>
 			</footer>
