--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,11 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/Research">Research</a></li>
-	        		<li><a href="/Publications">Publications</a></li>
-	        		<li><a href="/People">People</a></li>
-              			<li><a href="/Alumni">Alumni</a></li>
-				<li><a href="/Contact">Contact</a></li>
+		        	<li><a href="/REYNOIRD Lab: Research">Research</a></li>
+	        		<li><a href="/REYNOIRD Lab: Publications">Publications</a></li>
+	        		<li><a href="/REYNOIRD Lab: People">People</a></li>
+              			<li><a href="/REYNOIRD Lab: Alumni">Alumni</a></li>
+				<li><a href="/REYNOIRD Lab: Contact">Contact</a></li>
 				</ul>
 			</nav>
 			<div class="container">
