--- a/css/main.css
+++ b/css/main.css
@@ -58,9 +58,9 @@ ul.posts li {
 
 .picture-left {
 	float: left;
-  margin : auto;
+  margin : 0% 0% 0% 0%;
 }
 
 .paragraph-right {
-  margin : 0% 0% 0% 0%
+  margin : 0% 0% 0% 0%;
 }
