--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
+				<li><h2><a href="/">Home</a></h2></li>
 		        	<li><a href="/Research">Research</a></li>
 				<li><a href="/News">News</a></li>
 	        		<li><a href="/Publications">Publications</a></li>
