--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,12 @@
 			<nav>
 	    		<ul>
 				<li><h2><a href="/">Home</a></h2></li>
-		        	<li><a href="/Research">Research</a></li>
-				<li><a href="/News">News</a></li>
-	        		<li><a href="/Publications">Publications</a></li>
-	        		<li><a href="/People">People</a></li>
-              			<li><a href="/Alumni">Alumni</a></li>
-				<li><a href="/Contact">Contact</a></li>
+		        	<li><h2><a href="/Research">Research</a></h2></li>
+				<li><h2><a href="/News">News</a></h2></li>
+	        		<li><h2><a href="/Publications">Publications</a></h2></li>
+	        		<li><h2><a href="/People">People</a></h2></li>
+              			<li><h2><a href="/Alumni">Alumni</a></h2></li>
+				<li><h2><a href="/Contact">Contact</a></h2></li>
 				</ul>
 			</nav>
 			<div class="container">
