--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,9 @@
 	    		<h3><ul>
 				<li><a href="/">Home</a></li>
 		        	<li><a href="/Research">Research</a></li>
+				<li><a href="/Publications">Publications</a></li>
 				<li><a href="/News">News</a></li>
-	        		<li><a href="/Publications">Publications</a></li>
+	        		<li><a href="/Media_coverage">Media coverage</a></li>
 	        		<li><a href="/People">People</a></li>
               			<li><a href="/Alumni">Alumni</a></li>
 				<li><a href="/Contact">Contact</a></li>
